# fiasco

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .rtd_environment.yml  .ruff.toml  .sunpy-template.yml  .travis.yml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.rst  MANIFEST.in  README.md  azure-pipelines.yml  conftest.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  run-tests.yml
changelog/: 450.bugfix.rst  README.rst
ci/: setup_dbase.py
docs/: Makefile  chianti.rst  citation.rst  conf.py  conftest.py  dev_guide.rst  developer.rst  getting_started.rst  how_to_guides.rst  index.rst  install.rst  nitpick-exceptions  quick_start.rst  references.bib  resources.rst  tutorial.rst  works_citing.bib  works_citing.rst
docs/code_ref/: fiasco.rst  index.rst  io.rst  util.rst
docs/fiasco/: index.rst
docs/reference/: index.rst
docs/reference/code_ref/: base.rst  fiasco.rst  index.rst  io.rst  util.rst
docs/topic_guides/: database_format.rst  direct_ionization.rst  freebound_gaunt_factor.rst  index.rst  two_photon_continuum.rst
examples/: aia_response.py  ion_metadata.py  nei_populations.py  parse_raw_data.py  plot_contribution_function.py  plot_ioneq.py  plot_recomb_rate.py  skip_aia_response.py
examples/idl_comparisons/: README.rst  continuum_comparison.py  goft_comparison.py  ioneq_comparison.py
examples/user_guide/: README.rst  aia_response.py  ion_collection.py  ion_metadata.py  nei_populations.py  parse_raw_data.py  plot_contribution_function.py  plot_ioneq.py  plot_ionization_fraction.py  plot_jet_density_figure.py  plot_recomb_rate.py
fiasco/: CITATION.rst  __init__.py  base.py  collections.py  conftest.py  datalayer.py  element.py  elements.py  fiasco.py  gaunt.py  ion.py  ions.py  level.py  levels.py  read_config.py
fiasco/io/: __init__.py  datalayer.py  factory.py  generic.py  sources.py
fiasco/io/sources/: __init__.py  continuum_sources.py  ion_sources.py  non_ion_sources.py
fiasco/io/sources/tests/: __init__.py  test_ion_sources.py  test_sources.py
fiasco/io/tests/: test_datalayer.py
fiasco/tests/: __init__.py  coveragerc  test_base.py  test_collections.py  test_element.py  test_fiasco.py  test_gaunt.py  test_ion.py
fiasco/tests/data/: eis_fe_xiii.readme  eis_fe_xiii.sav  file_hashes_v10.1.json  file_hashes_v11.0.2.json  file_hashes_v9.0.1.json  test_file_list.json
fiasco/tests/idl/: __init__.py  conftest.py  helpers.py  test_idl_continuum.py  test_idl_goft.py  test_idl_ioneq.py  test_idl_level_pops.py  test_idl_line_ratio.py
fiasco/tests/idl/data/: advanced_model_rates_avrett_atmosphere_6_2_v11.0.2.asdf  advanced_model_rates_no_atm_6_2_v11.0.2.asdf  dielectronic_recombination_suppression_factor_14_4_v10.1.0.asdf  dielectronic_recombination_suppression_factor_14_4_v11.0.2.asdf  dielectronic_recombination_suppression_factor_16_5_v10.1.0.asdf  dielectronic_recombination_suppression_factor_16_5_v11.0.2.asdf  dielectronic_recombination_suppression_factor_26_12_v10.1.0.asdf  dielectronic_recombination_suppression_factor_26_12_v11.0.2.asdf  dielectronic_recombination_suppression_factor_26_13_v10.1.0.asdf  dielectronic_recombination_suppression_factor_26_13_v11.0.2.asdf  dielectronic_recombination_suppression_factor_26_14_v10.1.0.asdf  dielectronic_recombination_suppression_factor_26_14_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_2_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_2_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_3_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_3_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_4_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_4_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_5_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_5_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_6_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_6_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_7_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_7_v11.0.2.asdf  dielectronic_recombination_suppression_factor_8_8_v10.1.0.asdf  dielectronic_recombination_suppression_factor_8_8_v11.0.2.asdf  eis_fe_xiii_density_ratio_v11.0.2.asdf  freebound_all_ions_v10.1.0.asdf  freebound_all_ions_v11.0.2.asdf  freebound_all_ions_v8.0.7.asdf  freebound_all_ions_v9.0.1.asdf  freebound_radiative_loss_all_ions_v10.1.0.asdf  freebound_radiative_loss_all_ions_v11.0.2.asdf  freebound_radiative_loss_all_ions_v8.0.7.asdf  freebound_radiative_loss_all_ions_v9.0.1.asdf  freefree_all_ions_v10.1.0.asdf  freefree_all_ions_v11.0.2.asdf  freefree_all_ions_v8.0.7.asdf  freefree_all_ions_v9.0.1.asdf  freefree_radiative_loss_all_ions_v10.1.0.asdf  (+134 more)
fiasco/tests/idl/ssw_gen_functions/: add_tag.pro  allow_windows.pro  append_arr.pro  arr2str.pro  break_file.pro  chk_dir.pro  concat_dir.pro  default.pro  deriv_arr.pro  err_state.pro  event_name.pro  exist.pro  file_exist.pro  file_stat.pro  file_test2.pro  fxpar.pro  get_delim.pro  get_dfont.pro  get_logenv.pro  get_uniq.pro  get_wvalue.pro  grep.pro  have_tag.pro  idl_release.pro  is_blank.pro  is_number.pro  is_number2.pro  is_string.pro  is_struct.pro  is_windows.pro  null.pro  os_family.pro  since_version.pro  ssw_uniq.pro  str2arr.pro  str_lastpos.pro  strpad.pro  trim.pro  wc_where.pro
fiasco/util/: __init__.py  decorators.py  exceptions.py  logger.py  setup_db.py  tools.py  util.py  yes_no.py
fiasco/util/data/: file_hashes_v8.0.7.json  test_file_list.json
fiasco/util/tests/: test_decorator.py  test_tools.py  test_util.py
licenses/: LICENSE.rst
requirements/: requirements-dev.txt  requirements.txt
tools/: generate_hash_table.py  generate_test_file_list.py
