[build-system]
requires = ["setuptools",
            "setuptools_scm[toml]",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiasco"
dynamic = ["version"]
description = "A Python interface to the CHIANTI atomic database"
readme = {file="README.md", content-type = "text/markdown"}
license = {file="LICENSE.rst"}
authors = [
  {name="Will Barnes", email="will.t.barnes@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = [
  "heliophysics",
  "solar physics",
  "astrophysics",
  "plasma physics",
  "science",
  "atomic data",
  "atomic physics",
]
requires-python = ">=3.10"
dependencies = [
  "astropy",
  "fortranformat",
  "h5py",
  "numpy",
  "plasmapy",
]

[project.urls]
Homepage = "https://fiasco.readthedocs.io"
Documentation = "https://fiasco.readthedocs.io"
Repository = "https://github.com/wtbarnes/fiasco"
Issues = "https://github.com/wtbarnes/fiasco/issues/"

[project.optional-dependencies]
all = ["fiasco"]
test = [
  "fiasco[all]",
  "asdf-astropy",
  "asdf>=3.1",
  "matplotlib",
  "pytest-astropy",
  "pytest-cov",
  "pytest",
]
test_idl = [
  "fiasco[test]",
  "hissw",
]
docs =[
  "fiasco[all]",
  "aiapy>=0.10",
  "asdf-astropy",
  "asdf>=3.1",
  "hissw",
  "pydata-sphinx-theme",
  "sphinx-automodapi",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx",
  "sphinxcontrib-bibtex",
]
dev = ["fiasco[test,docs]"]

[tool.setuptools]
packages = ["fiasco"]

[tool.setuptools_scm]
write_to = "fiasco/version.py"

[tool.pytest.ini_options]
testpaths = [
  "fiasco",
  "docs"
]
norecursedirs = [
    "docs/_build",
    "docs/generated",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
remote_data_strict = "False"
filterwarnings =[
  "error",
  "ignore:numpy.ndarray size changed",
  "ignore:The unit 'erg' has been deprecated in the VOUnit standard.*:astropy.units.core.UnitsWarning",
  "ignore:The unit 'Angstrom' has been deprecated in the VOUnit standard.*:astropy.units.core.UnitsWarning",
  # Can be removed when pandas 3.0.0 is released
  "ignore:\\nPyarrow will become a required dependency of pandas in the next major release of pandas:DeprecationWarning",
  # Files created with previous versions of asdf-astropy issue a warning if you have a different version installed
  "ignore::asdf.exceptions.AsdfWarning",
  # Python 3.14 issue with extracting tarball
  "ignore:.*filter extracted tar archives and reject files or modify their metadata.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
omit = [
  "*/test_idl*.py"
]

[tool.coverage.report]

[tool.isort]
line_length = 88
wrap_length = 80
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["fiasco", ]
default_section = "STDLIB"
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
honor_noqa = true
lines_between_types = 1

[tool.codespell]
skip = "*.fts,*.fits,venv,*.pro,*.bib,*.asdf,*.json"
ignore-words-list = "te,emiss"

[tool.ruff]
target-version = "py310"
line-length = 110
exclude=[
  ".git,",
  "__pycache__",
  "build",
  "fiasco/version.py",
]
show-fixes = true
output-format = "full"

lint.select = [
  "E",
  "F",
  "W",
  "UP",
  "PT",
  #"RET",
  #"TID",
]
lint.extend-ignore = [
  # pycodestyle (E, W)
  "E501",  # LineTooLong                             # TODO! fix
  "E741",  # Ambiguous variable name

  # pytest (PT)
  "PT001",  # Always use pytest.fixture()
  "PT004",  # Fixtures which don't return anything should have leading _
  "PT007",  # Parametrize should be lists of tuples  # TODO! fix
  "PT011",  # Too broad exception assert             # TODO! fix
  "PT023",  # Always use () on pytest decorators
]

[tool.ruff.lint.per-file-ignores]
# Part of configuration, not a package.
"setup.py" = ["INP001"]
"conftest.py" = ["INP001"]
# implicit-namespace-package. The examples are not a package.
"docs/*.py" = ["INP001"]
# Module level imports do not need to be at the top of a file here
"docs/conf.py" = ["E402"]
"__init__.py" = ["E402", "F401", "F403"]
"test_*.py" = ["B011", "D", "E402", "S101"]
# Allow star import for the factory
"fiasco/io/factory.py" = ["F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
