[build-system]
requires = [
  "setuptools!=78.0.1",  # Pin setuptools because of fortranformat https://github.com/brendanarnold/py-fortranformat/issues/43
  "setuptools_scm[toml]",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fiasco"
dynamic = ["version"]
description = "A Python interface to the CHIANTI atomic database"
readme = {file="README.md", content-type = "text/markdown"}
license = {file="LICENSE.rst"}
authors = [
  {name="Will Barnes", email="will.t.barnes@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = [
  "heliophysics",
  "solar physics",
  "astrophysics",
  "plasma physics",
  "science",
  "atomic data",
  "atomic physics",
]
requires-python = ">=3.12"
dependencies = [
  "astropy>=5.2",
  "fortranformat>=2",
  "h5py>=3.9",
  "numpy>=1.25",
  "plasmapy>=2024.10.0",
]

[project.urls]
Homepage = "https://fiasco.readthedocs.io"
Documentation = "https://fiasco.readthedocs.io"
Repository = "https://github.com/wtbarnes/fiasco"
Issues = "https://github.com/wtbarnes/fiasco/issues/"

[project.optional-dependencies]
all = ["fiasco"]
test = [
  "fiasco[all]",
  "asdf-astropy>=0.5",
  "asdf>=3.1",
  "matplotlib>=3.8",
  "pytest-astropy>=0.11",
  "pytest-cov>=5",
  "pytest>=8",
]
test_idl = [
  "fiasco[test]",
  "hissw>=2.3",
  "GitPython>=3.1.34",
]
docs =[
  "fiasco[all]",
  "aiapy>=0.11",
  "asdf-astropy>=0.5",
  "asdf>=3.1",
  "hissw>=2.3",
  "pydata-sphinx-theme>=0.16",
  "sphinx-automodapi>=0.16",
  "sphinx-design>=0.5",
  "sphinx-gallery>0.14",
  "sphinx>=8",
  "sphinxcontrib-bibtex>=2.6",
]
dev = ["fiasco[test,docs]"]

[tool.setuptools]
packages = ["fiasco"]

[tool.setuptools_scm]
write_to = "fiasco/version.py"

[tool.pytest.ini_options]
testpaths = [
  "fiasco",
  "docs"
]
norecursedirs = [
    "docs/_build",
    "docs/generated",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
remote_data_strict = "False"
filterwarnings =[
  "error",
  "ignore:numpy.ndarray size changed",
  "ignore:The unit 'erg' has been deprecated in the VOUnit standard.*:astropy.units.core.UnitsWarning",
  "ignore:The unit 'Angstrom' has been deprecated in the VOUnit standard.*:astropy.units.core.UnitsWarning",
  # Can be removed when pandas 3.0.0 is released
  "ignore:\\nPyarrow will become a required dependency of pandas in the next major release of pandas:DeprecationWarning",
  # Files created with previous versions of asdf-astropy issue a warning if you have a different version installed
  "ignore::asdf.exceptions.AsdfWarning",
  # Python 3.14 issue with extracting tarball
  "ignore:.*filter extracted tar archives and reject files or modify their metadata.*:DeprecationWarning",
  # Python 3.13 issue with sqlalchemy and pytest. See, for example, https://github.com/pallets-eco/flask-sqlalchemy/issues/1379
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
omit = [
  "fiasco/conftest.py",
  "fiasco/tests/idl/conftest.py",
  "fiasco/tests/idl/helpers.py",
]

[tool.coverage.report]

[tool.isort]
line_length = 88
wrap_length = 80
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["fiasco", ]
default_section = "STDLIB"
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
honor_noqa = true
lines_between_types = 1

[tool.codespell]
skip = "*.fts,*.fits,venv,*.pro,*.bib,*.asdf,*.json"
ignore-words-list = "te,emiss"
