[metadata]
name = fiasco
author = Will Barnes
author_email = will.t.barnes@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/wtbarnes/fiasco
description =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    h5py
    fortranformat
    plasmapy

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
    matplotlib
docs =
    sphinx
    sphinx-automodapi
    sphinx-gallery
    towncrier
    sunpy[net,image]
    aiapy

[tool:pytest]
testpaths = "fiasco" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = False
filterwarnings =
  error
  ignore:numpy.ndarray size changed

[coverage:run]
omit =
  fiasco/_sunpy_init*
  fiasco/conftest.py
  fiasco/*setup_package*
  fiasco/tests/*
  fiasco/*/tests/*
  fiasco/extern/*
  fiasco/version*
  */fiasco/_sunpy_init*
  */fiasco/conftest.py
  */fiasco/*setup_package*
  */fiasco/tests/*
  */fiasco/*/tests/*
  */fiasco/extern/*
  */fiasco/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
